@@ -460,10 +460,8 @@ def structured_text(v, name='(Unknown name)', md={}):
 # may give various errors on Python 2 or 3.  So we make separate functions
 REMOVE_BYTES = (b'\x00', b'\x1a', b'\r')
 REMOVE_TEXT = (u'\x00', u'\x1a', u'\r')
-DOUBLE_BYTES = (b"'", b'\\')
-DOUBLE_TEXT = (u"'", u'\\')
-ESCAPE_BYTES = (b'"',)
-ESCAPE_TEXT = (u'"',)
+DOUBLE_BYTES = (b"'",)
+DOUBLE_TEXT = (u"'",)
 
 def bytes_sql_quote(v):
     # Helper function for sql_quote, handling only bytes.
@@ -473,9 +471,6 @@ def bytes_sql_quote(v):
     # Double untrusted characters to make them harmless.
     for char in DOUBLE_BYTES:
         v = v.replace(char, char * 2)
-    # Backslash-escape untrusted characters to make them harmless.
-    for char in ESCAPE_BYTES:
-        v = v.replace(char, b'\\%s' % char)
     return v
 
 def text_sql_quote(v):
@@ -486,9 +481,6 @@ def text_sql_quote(v):
     # Double untrusted characters to make them harmless.
     for char in DOUBLE_TEXT:
         v = v.replace(char, char * 2)
-    # Backslash-escape untrusted characters to make them harmless.
-    for char in ESCAPE_TEXT:
-        v = v.replace(char, u'\\%s' % char)
     return v
 
 def sql_quote(v, name='(Unknown name)', md={}):
