@@ -103,13 +103,13 @@ class SqlQuoting(unittest.TestCase):
 
         self.assertEqual(bytes_sql_quote(b"Can't"), b"Can''t")
         self.assertEqual(bytes_sql_quote(b"Can\'t"), b"Can''t")
-        self.assertEqual(bytes_sql_quote(br"Can\'t"), b"Can\\\\''t")
+        self.assertEqual(bytes_sql_quote(br"Can\'t"), b"Can\\''t")
 
-        self.assertEqual(bytes_sql_quote(b"Can\\ I?"), b"Can\\\\ I?")
-        self.assertEqual(bytes_sql_quote(br"Can\ I?"), b"Can\\\\ I?")
+        self.assertEqual(bytes_sql_quote(b"Can\\ I?"), b"Can\\ I?")
+        self.assertEqual(bytes_sql_quote(br"Can\ I?"), b"Can\\ I?")
 
         self.assertEqual(
-            bytes_sql_quote(b'Just say "Hello"'), b'Just say \\"Hello\\"')
+            bytes_sql_quote(b'Just say "Hello"'), b'Just say "Hello"')
 
         self.assertEqual(
             bytes_sql_quote(b'Hello\x00World'), b'HelloWorld')
@@ -131,12 +131,12 @@ class SqlQuoting(unittest.TestCase):
         # SyntaxError on Python 3.
         # self.assertEqual(text_sql_quote(ur"Can\'t"), u"Can\\\\''t")
 
-        self.assertEqual(text_sql_quote(u"Can\\ I?"), u"Can\\\\ I?")
+        self.assertEqual(text_sql_quote(u"Can\\ I?"), u"Can\\ I?")
         # SyntaxError on Python 3.
         # self.assertEqual(text_sql_quote(ur"Can\ I?"), u"Can\\\\ I?")
 
         self.assertEqual(
-            text_sql_quote(u'Just say "Hello"'), u'Just say \\"Hello\\"')
+            text_sql_quote(u'Just say "Hello"'), u'Just say "Hello"')
 
         self.assertEqual(
             text_sql_quote(u'Hello\x00World'), u'HelloWorld')
@@ -159,12 +159,12 @@ class SqlQuoting(unittest.TestCase):
         # SyntaxError on Python 3.
         # self.assertEqual(sql_quote(ur"Can\'t"), u"Can\\\\''t")
 
-        self.assertEqual(sql_quote(u"Can\\ I?"), u"Can\\\\ I?")
+        self.assertEqual(sql_quote(u"Can\\ I?"), u"Can\\ I?")
         # SyntaxError on Python 3.
         # self.assertEqual(sql_quote(ur"Can\ I?"), u"Can\\\\ I?")
 
         self.assertEqual(
-            sql_quote(u'Just say "Hello"'), u'Just say \\"Hello\\"')
+            sql_quote(u'Just say "Hello"'), u'Just say "Hello"')
 
         self.assertEqual(
             sql_quote(u'Hello\x00World'), u'HelloWorld')
