@@ -4,27 +4,34 @@ Changelog
 2.13.6 (unreleased)
 -------------------
 
+- de-fang ``sql_quote`` even more as quoting is too database-specific.
+  (`#48 <https://github.com/zopefoundation/DocumentTemplate/issues/48>`_)
+
 
 2.13.5 (2020-01-31)
 -------------------
 
 - Escape more characters in ``sql_quote``.  Taken over from PloneHotfix20200121.
 
+
 2.13.4 (2017-02-15)
 -------------------
 
 - Switch TreeTag to use JSON to encode tree state.
+
 
 2.13.3 (2016-11-29)
 -------------------
 
 - Ensure html_quote is being applied to content with null characters.
 
+
 2.13.2 (2011-12-12)
 -------------------
 
 - Restrict the available functions in `DocumentTemplate.sequence` to public
   API's of `zope.sequencesort`.
+
 
 2.13.1 (2010-07-15)
 -------------------
